<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.onvit.sjpricechecker.MainActivity"
    android:background="#FFFFFF">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/barcodelabel"
        android:id="@+id/barcodelabel"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/barcodelayout"
        android:layout_below="@+id/barcodelabel">
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:id="@+id/barcode"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>
        <ImageButton
            android:background="#FFFFFF"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:id="@+id/btn_Scan"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/barcode_scanner_icon"/>
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/warenamelabel"
        android:id="@+id/warenamelabel"
        android:layout_below="@+id/barcodelayout"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/emptystring"
        android:id="@+id/warename"
        android:layout_below="@+id/warenamelabel"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/pricelabel"
        android:id="@+id/pricelabel"
        android:layout_above="@+id/price"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="50sp"
        android:text="@string/emptystring"
        android:id="@+id/price"
        android:layout_above="@+id/checkoffline"/>
    <CheckBox
        android:id="@+id/checkoffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/off_line"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/btn_updatedata"/>
    <Button
        android:id="@+id/btn_updatedata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updatedata"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
